# radicle-tui

./: .gitignore  .gitsigners  CHANGELOG.md  Cargo.toml  FRAMEWORK.md  README.md  build.rs  deny.toml  flake.nix  out.txt  rad.sh  rust-toolchain.toml  ~
.github/workflows/: binaries.yml  release.yml
.radicle/: ambient.yaml  native.yaml
examples/: basic.rs  basic_rmui.rs  hello.rs  hello_im.rs  hello_rrmui.rs  readme.rs  selection.rs
radicle-tui/: Cargo.toml
radicle-tui/src/app/: event.rs  page.rs
radicle-tui/src/ui/components/: patch.rs
radicle-tui/src/ui/widget/: patch.rs
scripts/: rad.sh
src/: app.rs  cob.rs  common.rs  context.rs  decl.rs  event.rs  flux.rs  im.rs  issue.rs  lib.rs  log.rs  main.rs  patch.rs  realm.rs  store.rs  task.rs  terminal.rs  ui.rs
src/app/: event.rs  page.rs
src/cob/: inbox.rs  issue.rs  patch.rs
src/common/: cob.rs  context.rs  log.rs
src/common/cob/: format.rs  issue.rs  patch.rs
src/flux/: event.rs  store.rs  terminal.rs  termination.rs  ui.rs
src/flux/ui/: cob.rs  ext.rs  format.rs  items.rs  layout.rs  span.rs  theme.rs  widget.rs
src/flux/ui/widget/: container.rs  input_box.rs  popup.rs  text.rs
src/issue/: app.rs  main.rs
src/issue/app/: event.rs  page.rs  ui.rs
src/patch/: app.rs  event.rs  main.rs  page.rs  subscription.rs
src/patch/app/: event.rs  page.rs  ui.rs
src/realm/: ui.rs
src/realm/ui/: cob.rs  state.rs  theme.rs
src/realm/ui/widget/: common.rs  container.rs  context.rs  form.rs  label.rs  list.rs
src/ui/: cob.rs  context.rs  ext.rs  format.rs  im.rs  items.rs  layout.rs  rm.rs  span.rs  state.rs  subscription.rs  theme.rs  utils.rs  widget.rs
src/ui/im/: widget.rs
src/ui/rm/: widget.rs
src/ui/rm/widget/: container.rs  input.rs  list.rs  text.rs  utils.rs  window.rs
src/ui/widget/: common.rs  container.rs  context.rs  form.rs  home.rs  input.rs  issue.rs  label.rs  list.rs  page.rs  patch.rs  text.rs  utils.rs  window.rs
src/ui/widget/common/: container.rs  context.rs  form.rs  label.rs  list.rs
