[package]
name = "radicle-tui"
description = "Radicle terminal user interface"
version = "0.7.0"
repository = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z39mP9rQAaGmERfUMPULfPUi473tY"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
authors = ["Erik Kundt <erik@zirkular.io>"]
keywords = ["radicle", "tui", "heartwood", "cli"]
readme = "README.md"
edition = "2021"
build = "build.rs"


[features]
default = ["bin"]
bin = []

[[bin]]
name = "rad-tui"
path = "bin/main.rs"
required-features = ["bin"]

[dependencies]
ansi-to-tui = { version = "7.0.0" }
anyhow = { version = "1" }
lexopt = { version = "0.3.0" }
fuzzy-matcher = "0.3.7"
homedir = { version = "0.3.3" }
lazy_static = { version = "1.5.0" }
log = { version = "0.4.19" }
nom = { version = "^7.0.0" }
radicle = { version = "0.20.0" }
radicle-term = { version = "0.16.0" }
radicle-cli = { version = "0.17.0" }
radicle-surf = { version = "0.22.0" }
ratatui = { version = "0.29.0", default-features = false, features = [
    "all-widgets",
    "crossterm",
    "serde",
] }
md5 = { version = "0.8.0" }
simple-logging = { version = "2.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
timeago = { version = "0.5.0" }
terminal-light = { version = "1.4.0" }
thiserror = { version = "2.0.16" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.17" }
tui-textarea = { version = "0.7.0", default-features = false, features = [
    "crossterm",
] }
tui-tree-widget = { version = "0.23.0" }

[dev-dependencies]
pretty_assertions = "^1.4.1"
radicle = { version = "0.20.0", features = ["test"] }
radicle-git-ext = { version = "0.8.1", features = ["serde"] }


[dev-dependencies.git2]
version = "0.19.0"
default-features = false
features = ["vendored-libgit2"]
